--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,35 +1,13 @@
 
 <div id="signup" class="span6 offset3" >
-  <%= form_for @user do |form| %>
-    <% if @user.errors.any? %>
-      <div class="errors well well-large" >
-	<h4>There were errors in your previous submission. Try again.</h4>
-	<ul>
-	  <% @user.errors.full_messages.each do |message| %>
-	    <li><%= message %></li>
-	  <% end %>
-	</ul>
-      </div>
-    <% end %>
-    <fieldset>  
-      <div class="field" >
-	<%= f.label :firstname %>
-	<%= f.text_field :firstname %>
-      </div>
-      <div class="field" >
-	<%= f.label :lastname %>
-	<%= f.text_field :lastname %>
-      </div>
-      <div class="field" >
-	<%= f.label :email %>
-	<%= f.text_field :email %>
-      </div>
-      <div class="field" >
-	<%= f.label :password %>
-	<%= f.text_field :password %>
-      </div>
-      # TODO add role based role assignment selectors here
-      <div class="actions" ><%= f.submit "Sign Up" %></div>
-    </fieldset>
-  <% end %>
+	<%= simple_form_for(@user, :html => {:class => 'form-vertical' }) do |f| %>
+	<fieldset>
+		<% if f.error_messages %><div class="well" ><%= f.error_messages %></div><% end %>
+		<%= f.input :firstname, label: "First Name", wrapper_html: { class: 'field' } %>
+		<%= f.input :lastname, label: "Last Name", wrapper_html: { class: 'field' } %>
+		<%= f.input :email, label: "Email", wrapper_html: { class: 'field' } %>
+		<%= f.input :password, label: "Password", wrapper_html: { class: 'field' } %>
+		<div class="actions" ><%= f.button :submit %></div>
+	</fieldset>
+	<% end %>
 </div>
