--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>VotingSite</title>
+  <title>CIS 422 Voting Site</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div id="page-wrapper" class="container" >
+		
+		
+	
+		<%= yield %>
 
-<%= yield %>
-
+	</div>
 </body>
 </html>
