--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,10 +45,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </a>
           <a class="brand" href="#">Voting Site</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
+           	  <li><%= link_to "My Information", current_user %></li>
            	  <li><%= link_to "Ballots", :controller => :ballot, :action => :index %></li>
               <li><%= link_to "Votes", :controller => :vote, :action => :index %></li>
               <li><%= link_to "Log Out", logout_path  %></li>
