--- a/app/views/ballots/_mod_form.html.erb
+++ b/app/views/ballots/_mod_form.html.erb
@@ -8,7 +8,7 @@
 	<%= f.date_time :end_time %><br />
 	<hr />
 	<%= f.fields_for :candidates do |builder| %>
-  		<%= render 'candidate_fields', f: builder %>
+  		<%= render 'add_candidate_fields', f: builder %>
 	<% end %>
 	<%= link_to_add_fields "Add Candidate", f, :candidates %>
 	<hr />
@@ -19,6 +19,6 @@
 	<br />
 	<%= f.check_box :_destroy %>
   	<%= f.label :_destroy, "Remove Ballot" %>
-	<%= f.submit "Create ballot", class: "btn btn-primary" %>
+	<%= f.submit "Save ballot", class: "btn btn-primary" %>
 <% end %>
 
