--- a/app/views/ballots/_voter_form.html.erb
+++ b/app/views/ballots/_voter_form.html.erb
@@ -1,16 +1,12 @@
 
 
 <div id="voter-form" >
-	<%= form_for @ballot do |f| %>
+	<%= simple_form_for @ballot do |f| %>
 		<strong><%= f.text_field :title, @ballot.title, :readonly => true %></strong>
 		<p><%= f.text_area :description, @ballot.description, :readonly => true %></p>
 		<p><%= f.text_field, @ballot.end_time.to_formatted_s(:long_ordinal), :readonly => true %></p>
 		<strong>Candidates</strong>
-		<ul>
-			<% @ballot.candidates.each do |c| %>
-				<li><%= f.radio_button :candidate, c.title %><%= f.label c.title %></li>
-			<% end %>
-		</ul>
+		<%= f.collection_select :  %>
 		<%= f.submit "Vote", class: "btn btn-primary" %>
 	<% end %>
 </div>
