--- a/app/views/ballots/_mod_form.html.erb
+++ b/app/views/ballots/_mod_form.html.erb
@@ -1,7 +1,8 @@
 
-<%= form_for @ballot do |f| %>
+<div id="mod-ballot-form" class="span6 offset3" >
+<%= simple_form_for @ballot do |f| %>
 	<%= f.label :title %>
-	<%= f.text_field :title %>
+	<%= f.text_field :title :%>
 	<%= f.label :description %>
 	<%= f.text_area :description %><br />
 	<%= f.label :end_time %>
@@ -12,4 +13,4 @@
   	<%= f.label :_destroy, "Remove Ballot" %>
 	<%= f.submit "Save ballot", class: "btn btn-primary" %>
 <% end %>
-
+</div>
