--- a/app/views/ballots/_voter_form.html.erb
+++ b/app/views/ballots/_voter_form.html.erb
@@ -1,12 +1,12 @@
 
 <div id="voter-form" class="span6 offset3" >
 	<%= simple_form_for @ballot do |f| %>
-		<strong><%= f.text_field :title, input_html: { readonly: true, value: @ballot.title } %></strong>
-		<p><%= f.text_area :description, input_html: { readonly: true, value: @ballot.description } %></p>
-		<p><%= f.text_field :end_time, input_html: { readonly: true, value: @ballot.end_time.to_formatted_s(:long_ordinal) } %></p>
+		<strong><%= f.text_field :title, disabled: true, input_html: { value: @ballot.title } %></strong>
+		<p><%= f.text_area :description, disabled: true, input_html: { value: @ballot.description } %></p>
+		<p><%= f.text_field :end_time, disabled: true, input_html: { value: @ballot.end_time.to_formatted_s(:long_ordinal) } %></p>
 		<strong>Candidates</strong>
 		<%= f.association :candidates, collection: @ballots.candidates.sort { |c| c.title }, label_method: :title, value_method: :id, as: :radio_buttons %>
-		<%= f.button :submit, label: "Vote", class: "btn btn-primary" %>
+		<%= f.button :submit, label: "Vote" %>
 	<% end %>
 </div>
 
