--- a/app/views/ballots/_mod_form.html.erb
+++ b/app/views/ballots/_mod_form.html.erb
@@ -1,5 +1,5 @@
 
-<div id="mod-ballot-form" class="span8 offset2" >
+<div id="mod-ballot-form" class="span6 offset3" >
 <%= simple_form_for @ballot do |f| %>
 	<%= f.label :title %>
 	<%= f.text_field :title %>
@@ -7,10 +7,14 @@
 	<%= f.text_area :description %>
 	<%= f.label :end_time %>
 	<%= f.text_field :end_time, class: "datepicker" %>
-	<%= f.label :voter_input %>
-	<%= f.text_area :voter_input, hint: "Enter one voter email on each line." %>
-	<%= f.label :candidate_input %>
-	<%= f.text_area :candidate_input, hint: "Enter one candidate option on each line." %>
+	<hr />
+	<%= f.fields_for :candidates do |builder| %>
+	<%= render 'candidate_fields', f: builder %>
+	<% end %>
+	<%= link_to_add_fields "Add Candidate", f, :candidates %>
+	<hr />
+	<%= f.check_box :_destroy %>
+	<%= f.label :_destroy, "Remove Ballot" %>
 	<%= f.button :submit %>
 <% end %>
 </div>
