--- a/app/views/ballots/show.html.erb
+++ b/app/views/ballots/show.html.erb
@@ -1,18 +1,21 @@
 
 <div class="span8 offset2" id="ballot">
-  <h3> <% @ballot.title %> </h3>
-  <p> <% @ballot.description %> </p>
-  <p> <% @ballot.end_time %> </p>
-	<ul>
+  <h3> <%= @ballot.title %> </h3>
+  <p> <%= @ballot.description %> </p>
+  <p> <%= @ballot.end_time %> </p>
+  <% if current_user.is? "voter" %>
+    <%= render "voter_form" %>
+  <% else %>
+  <h3>Candidates</h3>
+  <ul>
 		<% @ballot.candidates.each do |c| %>
-		 <li> data-description: "<% c.description %>" 
-					id: "<% c.id %>"
-				<span> <% c.title %></span>
-			
+		 <li><%= c.title %>
+		   
 				<% if current_user.is? "moderator" or @ballot.public_results %>
-					<span> c.votes.count </span>
+					<span> => <%= c.votes.count %></span>
 				<% end %>
 		 </li>
 		<% end %>
 	</ul>
+  <% end %>
 </div>
