--- a/app/views/ballots/show.html.erb
+++ b/app/views/ballots/show.html.erb
@@ -1,21 +1,14 @@
 
-<div class="span8 offset2" id="ballot">
+<div class="span6 offset3" id="ballot">
   <h3> <%= @ballot.title %> </h3>
   <p> <%= @ballot.description %> </p>
-  <p> <%= @ballot.end_time %> </p>
-  <% if current_user.is? "voter" %>
+  <% unless @ballot.end_time.nil? %><p><%= @ballot.end_time.to_formatted_s(:long) %></p><% end %>
+  <% if current_user.is? "moderator" %>
+  	<%= link_to "Edit", :controller => :ballots, :action => :edit, :id => @ballot %>
+  <% end %>
+  <% if current_user.is? "voter" and @ballot.active? and !current_user.voted_on?(@ballot) %>
     <%= render "voter_form" %>
   <% else %>
-  <h3>Candidates</h3>
-  <ul>
-		<% @ballot.candidates.each do |c| %>
-		 <li><%= c.title %>
-		   
-				<% if current_user.is? "moderator" or @ballot.public_results %>
-					<span> => <%= c.votes.count %></span>
-				<% end %>
-		 </li>
-		<% end %>
-	</ul>
+  	<%= render "inactive" %>
   <% end %>
 </div>
