--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,8 @@
         <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
+            <% if current_user.is? "administrator" %><span class="icon-bar"></span><% end %>
+            <% if current_user.is? "moderator" %><span class="icon-bar"></span><% end %>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -51,6 +53,12 @@
           <div class="container-fluid nav-collapse">
             <ul class="nav">
            	  <li><%= link_to "My Information", current_user %></li>
+              <% if current_user.is? "administrator" %>
+                <li><%= link_to "Add Moderator", "/users/new" %></li>
+              <% end %>
+              <% if current_user.is? "moderator" %>
+                <li><%= link_to "Add Voter", "/users/new" %></li>
+              <% end %>
            	  <li><%= link_to "Ballots", "/ballots" %></li>
               <li><%= link_to "Votes", "/votes" %></li>
               <li><%= link_to "Log Out", logout_path  %></li>
