--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
           <a class="brand" href="#">Voting Site</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-           	  <li><%= link_to "My Information", current_user %></li>
+           	  <li><a href="#" id="myInfo" class="btn" data-trigger="hover" data-placement="bottom" data-content="MY INFO" title="popover on bottom"  <%= link_to "My Information", current_user %></a></li>
               <% if current_user.is? "administrator" %>
                 <li><%= link_to "Add Moderator", "/users/new" %></li>
               <% end %>
@@ -78,6 +78,13 @@
     </div> <!-- /container -->
 
     <%= javascript_include_tag "application" %>
+
+    <script type="text/javascript">
+      $(function()
+      {
+        $("#myInfo").popover();
+      } );
+    </script>
 
   </body>
 </html>
